<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="98dp"
        android:layout_height="33dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="64dp"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/usernameLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="396dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/passwordLog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/namefill"
        app:layout_constraintBottom_toTopOf="@+id/passwordLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <EditText
        android:id="@+id/passwordLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="396dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <Button
        android:id="@+id/logbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="300dp"
        android:text="@string/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordLog" />

    <Button
        android:id="@+id/signButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="302dp"
        android:text="@string/sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</android.support.constraint.ConstraintLayout>